2026-01-25  Karl Berry  <karl@freefriends.org>

	* xgetcwd.c: remove all traces of getwd, since recent GNU
	ld gives an unconditional warning if it is used. We didn't in	
	fact use it on any system with a non-forking getcwd, i.e.,
	essentially all of them nowadays, but a call to it was still
	compiled in.

2026-01-21  Karl Berry  <karl@freefriends.org>

	* kpsewhich.c (format_abbrs): add src as another abbreviation for
	kpse_texsource_format, and various others to 

2026-01-07  Karl Berry  <karl@freefriends.org>

	* version.ac (kpse_dev): remove /dev, for TL26.
	* NEWS,
	* doc/kpathsea.texi,
	* kpsewhich.c,
	* texmf.cnf: copyright 2026.

2026-01-06  Karl Berry  <karl@freefriends.org>

	* tex-file.c (kpathsea_name_ok): for openin_any for reading,
	always return true without checking anything.
	* texmf.cnf (openin_any),
	* NEWS: document this.

2025-11-11  Karl Berry  <karl@freefriends.org>

	* elt-dirs.c (do_subdir): mention that btrfs also breaks the
	semantics of having st_nlink==2 in leaf directories.
	* tests/cnfnlink.test: comment out that test, since we don't want
	to try to detect what filesystem we're on or other bad st_nlink cases.
	Report from Jan Kasprzak,
	https://tug.org/pipermail/tex-k/2025-October/004212.html.

2025-11-11  Karl Berry  <karl@freefriends.org>

	* NEWS,
	* texmf.cnf: doc tweaks.

2025-07-20  Karl Berry  <karl@freefriends.org>

	* tests/cnfnlink.test: forgot to export TEXINPUTS.

2025-07-17  Karl Berry  <karl@freefriends.org>

	* NEWS: let's completely disable the st_nlink check by default.
	* doc/kpathsea.texi (Subdirectory expansion): document this.
	* elt-dirs.c (do_subdir): change name to texmf_nlink_for_leaf,
	for consistency with texmf_casefold_search.
	* tests/cnfnlink.test: change name; doc.
	* texmf.cnf (texmf_nlink_for_leaf): change name, and set to 0
	to disable the check.

2025-07-15  Karl Berry  <karl@freefriends.org>

	* c-std.h (getenv) [! HAVE_STDLIB_H]: remove declaration, 